# vt2_airspace_complexity

./: .gitignore  README.md  monte_carlo_demo.ipynb  pyproject.toml
airspace_runs/: airspace_search.ipynb  budapest_acc(lhcc).ipynb  budapest_acc(lhcc).py  malta_acc(lmmm).ipynb  malta_acc(lmmm).py  zagreb_acc(ldzo).ipynb  zagreb_acc(ldzo).py  zurich_acc(lsaz).ipynb  zurich_acc(lsaz).py
report_visualisations/: result_visualisations.ipynb
scripts/: adsb_functions.py  classes.py  complete_workflow.ipynb  data_fetching.ipynb  demo_low_traffic.ipynb  download.ipynb  functions.py  model_base.ipynb  traffic.ipynb
src/: 00_search_airspace.ipynb  Budapest_ACC(LHCC).ipynb  Malta_ACC(LMMM).ipynb  Roma_ACC(LIRR).ipynb  airspace_2_sandbox.ipynb  download.ipynb  gridspace.ipynb  muac.ipynb  sandbox_gridspace.ipynb  search_airspace.ipynb  simulation.ipynb  threshold.ipynb
src/complexity/: __init__.py  airspace.py  airspace_2.py  cellspace.py
src/report/: monte_carlo_demo.ipynb
src/scripts/: complete_workflow.ipynb  data_fetching.ipynb  demo_low_traffic.ipynb  manual_decomp.ipynb  model2.ipynb  model_base.ipynb  temp.ipynb  traindat.ipynb
src/temp/: airspace_2_sandbox.ipynb  classes_test.ipynb  low_peak_test.ipynb  model_1.ipynb  sandbox_gridspace.ipynb  visualisations.ipynb
src/temp/model/model_1/: parameters.pkl
src/utils/: __init__.py  adsb.py  general.py  geo.py  other.py  viz.py
