[tool.poetry]
name = "vt2-airspace-complexity"
version = "0.1.0"
description = ""
authors = ["Jan <krum@zhaw.ch>"]
readme = "README.md"
packages = [{include = "vt2_airspace_complexity"}]

[tool.poetry.dependencies]
python = "^3.11"
traffic = "^2.8.1"
plotly = "^5.13.1"
nbformat = "^5.8.0"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79